testsuite/tests/grammar/invalid_lexers/spacing_1.lkt
import common

lexer foo_lexer {
    @unparse_spacing() family ids {
        example <- "example"
    }
}
